--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,8 @@
 name: Publish
-
-on:
-  release:
-    types: [published]
+on: workflow_dispatch
+#on:
+#  release:
+#    types: [published]
 
 jobs:
   release:
