--- a/.github/workflows/check-commit.yml
+++ b/.github/workflows/check-commit.yml
@@ -1,12 +1,13 @@
 name: Check Commit Message
+
 on: [pull_request, push, workflow_dispatch]
 
 jobs:
   check:
-    name: PR Validation
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-      - uses: actions/checkout@v2
-      - name: Check commit
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2
+
+      - name: Check commit 🧪
         uses: adityaa30/check-commit@master
