--- a/.github/workflows/fullbuild.yml
+++ b/.github/workflows/fullbuild.yml
@@ -30,16 +30,12 @@ jobs:
       uses: mathieudutour/github-tag-action@v5.5
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1.0.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+    - name: Create a GitHub release
+      uses: ncipollo/release-action@v1
       with:
-        tag_name: ${{ tag_version }}
-        release_name: Release ${{ tag_version }}
-        draft: false
-        prerelease: false
+        tag: ${{ steps.tag_version.outputs.new_tag }}
+        name: Release ${{ steps.tag_version.outputs.new_tag }}
+        body: ${{ steps.tag_version.outputs.changelog }}
     - name: Output Release URL File
       run: echo ${{ steps.create_release.outputs.upload_url }} > release_url.txt
     - name: Save Release URL File for publish
