--- a/.github/workflows/fullbuild.yml
+++ b/.github/workflows/fullbuild.yml
@@ -73,7 +73,7 @@ jobs:
     - name: Get Release File Name & Upload URL
       id: get_release_info
       run: |
-       echo ::set-output name=file_name::${REPOSITORY_NAME##*/}-${TAG_REF_NAME##*/v} #ex. RepositoryName-1.0.0
+       echo ::set-output name=file_name::'/home/runner/work/BlazorDemo/BlazorDemo/release_url.txt'
        value=`cat release_url.txt`
        echo ::set-output name=upload_url::$value
       env:
@@ -86,6 +86,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_release_info.outputs.upload_url }}
-        asset_path: ./${{ matrix.rid }}.zip
-        asset_name: ${{ steps.get_release_info.outputs.file_name }}-${{ matrix.rid }}.zip
+        asset_path: ./BlazorDemo.zip
+        asset_name: BlazorDemo.zip
         asset_content_type: application/zip
