--- a/.github/workflows/fullbuild.yml
+++ b/.github/workflows/fullbuild.yml
@@ -58,6 +58,7 @@ jobs:
       uses: actions/download-artifact@v1
       with:
         name: release_url
+        path: release_url.txt
     - name: Setup .NET Core 5.0 (current)
       uses: actions/setup-dotnet@v1
       with:
