--- a/.github/workflows/fullbuild.yml
+++ b/.github/workflows/fullbuild.yml
@@ -42,6 +42,7 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: release_url
+        path: release_url.txt
       
     
   publish:
