--- a/.github/workflows/fullbuild.yml
+++ b/.github/workflows/fullbuild.yml
@@ -58,8 +58,8 @@ jobs:
     - name: Load Release URL File from release job
       uses: actions/download-artifact@v1
       with:
-        name: release_url.txt
-      
+        name: release_url
+        path: .
     - name: Setup .NET Core 5.0 (current)
       uses: actions/setup-dotnet@v1
       with:
