--- a/.github/workflows/fullbuild.yml
+++ b/.github/workflows/fullbuild.yml
@@ -77,7 +77,7 @@ jobs:
       id: get_release_info
       run: |
        echo ::set-output name=file_name::${REPOSITORY_NAME##*/}-${TAG_REF_NAME##*/v} #ex. RepositoryName-1.0.0
-       value=`cat release_url`
+       value=`cat ./release_url/release_url.txt`
        echo ::set-output name=upload_url::$value
       env:
         TAG_REF_NAME: ${{ github.ref }}
