--- a/.github/workflows/fullbuild.yml
+++ b/.github/workflows/fullbuild.yml
@@ -70,9 +70,8 @@ jobs:
       run: |
          
           # Build everything
-          dotnet publish src/BlazorApp.csproj -c Release --self-contained -o "BlazorDemo"
-          7z a -tzip "${BlazorDemo}.zip" "./${BlazorDemo}/*"
-          zip -r BlazorDemo.zip BlazorDemo
+          dotnet publish src/BlazorApp.csproj -c Release --self-contained -o "BlazorDemopublish"
+          zip -r BlazorDemo.zip BlazorDemopublish
 
     - name: Get Release File Name & Upload URL
       id: get_release_info
